--- a/sick-fits/backend/prisma.yml
+++ b/sick-fits/backend/prisma.yml
@@ -1,4 +1,6 @@
 endpoint: ${env:PRISMA_ENDPOINT}
-datamodel: datamodel.prisma
+datamodel: datamodel.graphql
+# secret: ${env:PRISMA_SECRET}
 hooks:
-  post-deploy: -graphql get-schema -p prisma
+  post-deploy:
+    - graphql get-schema -p prisma
